--- a/templates/day_test.exs.eex
+++ b/templates/day_test.exs.eex
@@ -3,37 +3,32 @@ defmodule Advent.Day<%= day %>Test do
 
   alias Advent.Day<%= day %>
 
+  @example_input """
+  """
+
+  @puzzle_input File.read!("puzzle_inputs/day_<%= day %>.txt")
+
   describe "part 1" do
     test "example" do
-      input = """
-      """
-
-      assert Day<%= day %>.part_1(input) == :foo
+      assert Day<%= day %>.part_1(@example_input) == :foo
     end
 
     @tag :puzzle_input
     test "puzzle input" do
-      assert "puzzle_inputs/day_<%= day %>.txt"
-             |> File.read!()
-             |> Day<%= day %>.part_1() == :foo
+      assert Day<%= day %>.part_1(@puzzle_input) == :foo
     end
   end
 
   describe "part 2" do
     @tag :skip
     test "example" do
-      input = """
-      """
-
-      assert Day<%= day %>.part_2(input) == :foo
+      assert Day<%= day %>.part_2(@example_input) == :foo
     end
 
     @tag :skip
     @tag :puzzle_input
     test "puzzle input" do
-      assert "puzzle_inputs/day_<%= day %>.txt"
-             |> File.read!()
-             |> Day<%= day %>.part_2() == :foo
+      assert Day<%= day %>.part_2(@puzzle_input) == :foo
     end
   end
 end
